WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
169178
Fix URLs relative to file URLs with paths beginning with Windows drive letters
https://bugs.webkit.org/show_bug.cgi?id=169178
Summary
Fix URLs relative to file URLs with paths beginning with Windows drive letters
Alex Christensen
Reported
2017-03-04 19:06:32 PST
Fix URLs relative to file URLs with paths beginning with Windows drive letters
Attachments
Patch
(13.86 KB, patch)
2017-03-04 19:12 PST
,
Alex Christensen
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alex Christensen
Comment 1
2017-03-04 19:12:48 PST
Created
attachment 303432
[details]
Patch
Tim Horton
Comment 2
2017-03-06 13:42:21 PST
Comment on
attachment 303432
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=303432&action=review
> Source/WebCore/platform/URLParser.cpp:492 > + if (base.protocolIs("file")) {
No love for early returns?
Alex Christensen
Comment 3
2017-03-06 14:55:57 PST
http://trac.webkit.org/r213469
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug