Fix URLs relative to file URLs with paths beginning with Windows drive letters https://bugs.webkit.org/show_bug.cgi?id=169178

Reviewed by Tim Horton.

LayoutTests/imported/w3c:

* web-platform-tests/url/a-element-expected.txt:
* web-platform-tests/url/a-element-xhtml-expected.txt:
* web-platform-tests/url/url-constructor-expected.txt:

Source/WebCore:

Windows drives in file URLs can begin with windows drive letters, such as file:///C:/
which should not be removed when making other URLs relative to them.
See https://url.spec.whatwg.org/#file-slash-state

Covered by new API tests and newly passing web-platform-tests.

* platform/URLParser.cpp:
(WebCore::URLParser::copyBaseWindowsDriveLetter):
(WebCore::URLParser::copyASCIIStringUntil):
(WebCore::URLParser::parse):
* platform/URLParser.h:

Tools:

* TestWebKitAPI/Tests/WebCore/URLParser.cpp:
(TestWebKitAPI::TEST_F):

LayoutTests:

* fast/url/relative-win-expected.txt:
Some tests pass now.  localhost should indeed be removed according to the latest spec.



Canonical link: https://commits.webkit.org/186233@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@213469 268f45cc-cd09-0410-ab3c-d52691b4dbfc